# pygiss

./: .gitignore  add_license.py  index.html  memoize.py  odict.py  ordered.py  params.json  setup.py
examples/: plottest1.py  plottest2.py  plottest3.py
giss/: JulianDay.html  __init__.py  basemap.py  bashfile.py  bind.py  cesm.py  checksum.py  events.py  f90.py  fd.py  functional.py  gcmtime.py  gicollections.py  gidate.py  gidict.py  gissfile.py  giter.py  giutil.py  hcinterp.py  ioutil.py  ioutils.py  itertools.py  make.py  memoize.py  ncutil.py  ncxaccess.py  nsidc.py  picklestore.py  pism.py  plotutil.py  proj.py  pyar.py  regrid1d.py  rundeck.py  runlength.py  searise.py  sparse.py  sparsematrix.py  steps.py  thunkserver.py  (+2 more)
giss/cpt/: README.txt  nrl_sirkes_nowhite.cpt
giss/giss-cpt/: BlRe.cpt  README.txt
giss/hcmodele/: __init__.py  hc.py  io.py  searise.py  test.py  util.py
giss/interp/: __init__.py  bilin.py  hcinterp.py  interp.py
giss/io/: acc.py  bashfile.py  giss.py  gissfile.py  noaa.py
giss/matplotlib/: backend_gtk3xxagg.py  backent_gtk3xx.py
giss/modele/: __init__.py  accfile.py  hc_vars_ncar.py  hcinput.py  hcprep.py  plot_params.py  plot_templates.py  plot_var.py  plotters.py  util.py
giss/plot/: LatLonPlotter.py  LonLatPlotter.py  ProjXYPlotter.py  __init__.py  config.py  plot_var.py  plotters.py  plotutil.py  pncview.py
giss/snowdrift/: __init__.py  height_classes.py  io.py
giss/tests/: test_bind.py  test_checksum.py  test_functional.py  test_gidate.py  test_gidict.py  test_memoize.py  test_util.py  test_xaccess.py
glint2/: Grid.py  __init__.py  cext.py  overlap.py  plotter.py
main/: README.txt  args_sample  lsacc  lsgiss  plot_gcmcell  pncview  pyar  pyunar  qdf  thunkserver
pncview/: gui.py  pncview.py  types.py
snowdrift/: Makefile.am  README  commonmk.am  configure.ac  f90_deps.mk  makefile  regrid_searise.py  snowdrift.F90  snowdrift_test.py  snowdrift_test2.py  snowdrift_test3.py
snowdrift/pyext/: Grid_py.cpp  Makefile.am  Rasterizer_py.cpp  Snowdrift_py.cpp  snowdrift_module_py.cpp
snowdrift/sbin/: Makefile.am  rastertest.cpp  read_eqp.f90  searise_cesm_overlap.cpp  searise_ll_overlap.cpp  xy_snowdrift.f90
snowdrift/slib/: Grid.cpp  GridCell.cpp  Grid_LatLon.cpp  Grid_XY.cpp  Grid_py.cpp  HeightClassifier.cpp  IndexTranslator.cpp  Makefile.am  OverlapMatrix.cpp  Rasterizer.cpp  Rasterizer_py.cpp  Rasterizer_py.hpp  Snowdrift.cpp  Snowdrift_py.cpp  SparseMatrix.cpp  clippers.cpp  eqp_f.f90  eqp_x.f90  geodesy.cpp  hsl_zd11_x.cpp  hsl_zd11d.f90  hsl_zd11d_x.f90  maputils.cpp  ncoverlap.F90  ncutil.cpp  ncutil_f.F90  pyutil.cpp  qpt_f.f90  qpt_x.cpp  qpt_x.f90  snowdrift.F90  snowdrift_eqp.f90.h  snowdrift_module_py.cpp  snowdrift_py.c  snowdrift_qp.f90.h  sparsebuilder.F90  sparsebuilder_c.cpp
test/: fetch_data  plottest1.py  plottest2.py  plottest3.py
(+62 files in other folders)
